--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "@hexlet/code",
   "type": "module",
   "version": "1.0.0",
-  "description": "[![Actions Status](https://github.com/AzamatAk/frontend-project-44/workflows/hexlet-check/badge.svg)](https://github.com/AzamatAk/frontend-project-44/actions)",
-  "main": "index.js",
+  "description": "Brain Games is a set of five console games.",
+  "main": "brain-games.js",
   "bin": {
     "brain-games": "bin/brain-games.js",
     "brain-even": "bin/brain-even.js",
@@ -16,29 +16,23 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
-    "type": "module",
-    "url": "git+https://github.com/AzamatAk/frontend-project-44.git"
+    "type": "git",
+    "url": "git+https://github.com/AlexVXA/frontend-project-44.git"
   },
-  "author": "",
+  "author": "AlexVXA",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/AzamatAk/frontend-project-44/issues"
+    "url": "https://github.com/AlexVXA/frontend-project-44/issues"
   },
-  "homepage": "https://github.com/AzamatAk/frontend-project-44#readme",
+  "homepage": "https://github.com/AlexVXA/frontend-project-44#readme",
   "dependencies": {
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-jest": "^27.2.1",
-    "jest": "^29.4.2",
+    "jest": "^29.4.3",
     "readline-sync": "^1.4.10"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.51.0",
-    "eslint": "^8.33.0",
-    "eslint-config-standard-with-typescript": "^34.0.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-n": "^15.6.1",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-react": "^7.32.2",
-    "typescript": "^4.9.5"
+    "eslint": "^8.34.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^27.2.1"
   }
 }
