--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "rules": {
     "linebrak-style": 0,
+    "linebreak-style": [0 ,"error", "windows"], 
     "global-require": 0
   },
   "scripts": {
