--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "version": "1.0.0",
   "description": "Brain Games is a set of five console games.",
   "bin": {
-    "brain-games": "bin/brain-games.js",
-    "brain-even": "bin/brain-even.js",
-    "brain-calc": "bin/brain-calc.js",
-    "brain-gcd": "bin/brain-gcd.js",
-    "brain-progression": "bin/brain-progression.js",
-    "brain-prime": "bin/brain-prime.js"
+    "brain-games": "bin/brainGames.js",
+    "brain-even": "bin/brainEven.js",
+    "brain-calc": "bin/brainCalc.js",
+    "brain-gcd": "bin/brainGcd.js",
+    "brain-progression": "bin/brainProgression.js",
+    "brain-prime": "bin/brainPrime.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
